# platonics_robot_teaching

./: CMakeLists.txt  README.md  package.xml  requirements.txt
action/: AbortGripper.action  LfdExecute.action  LfdExecuteSequence.action  LfdExecuteSkill.action  LfdHome.action  LfdRecord.action
assets/: franka_realsense_D405.stl  inlet_franka.stl
config/: login.yaml
scripts/: camera_feedback.py  feedback.py  feedback_franka_buttons.py  feedback_keyboard.py  feedback_spacenav.py  home.py  home_action_server  lfd  lfd.py  lfd_servers  play_all_skills.py  play_skill.py  record_skill.py  recording_node  recording_node.py  slider_solver.py  slider_solver_server  transfom.py  utils.py
srv/: ListSkills.srv  ListTemplates.srv  ListTrajectories.srv
